style.css
/* Mobile first design */
* {
    font-family: 'Lexend Deca', sans-serif;
}
        body {
        background-image: url("assets/noita-digital-QZX8jbK1xEw-unsplash\ \(1\).jpg");
        background-size: 100% 100%;
        min-height: 100%;
        resize: both; 
        overflow: scroll;  
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-color: black;
            
        }

    #aboutContainer {
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
        align-items: center;
        margin: 5em 5em 0 5em;
        }

    #carouselMain {
        width: 325px;
    }

     #projectsContainer {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        border-radius: 2em;
        }

    #profilePicture {
    height: 15em;
    border: 10px solid transparent;
    background-image: radial-gradient(at bottom left,hsl(39, 100%, 50%),hsl(204, 0%, 100%,0.2),hsl(234, 100%, 50%));
    background-origin: border-box; 
    border-radius: 50% 0%;
    margin: 3em 5em;
    }

    h1 {
        color: white;
        text-align: center;
        font-size: 4em;
        text-shadow: .06em .06em black; 
    }
    h2 {
        color: white;
        text-align: center;;
        backdrop-filter: blur(2em);
        padding: 1em;
        border-radius: 2em;
        text-shadow: .06em .06em black;
    }

    .shapes {
        background-repeat: no-repeat;
        display: flex;
        background-size: 100%;
        height: 20em;
        width: 20em;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        margin: 4em;
    }
    #triangle {
        background-image: url("assets/blueTriangle.png");
    }
    #square {
        background-image: url("assets/yellowSquare.png");
    }
    #circle {
        background-image: url("assets/redCircle.png");
        margin-left: 1.5em;
    }

    .paragraphShapes {
        font-weight: bold;
        font-size: 2em;
        width: 120px;
        margin: 6em;
        text-align: center;
    }
    #paragraphTriangle {
        color: orange;
        text-shadow: .06em .06em black;
        margin-top: 5em;

    }
    #paragraphSquare {
        color: purple;
        text-shadow: .04em .04em black;
    }
    #paragraphCircle {
        color: green;
        text-shadow: .06em .06em black;
    }

    h4 {
        color: white;
        text-align: center;
        font-size: 3em;
        text-shadow: .06em .06em black; 
        margin-top: 2em;
    }
    .skillSet {
        color: white;
        text-shadow: .06em .06em black;
        list-style-type: none;
        display: flex;
        justify-content: space-around;
        margin: 4em 2.5em 6em 1em;
    }

    .socials {
        color: white;
        text-shadow: .06em .06em black;
        list-style-type: none;
        display: flex;
        justify-content: space-around;
        margin: 4em 2.5em 6em 1em;
    }

    /* #switcher {
        list-style: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
      }
      #switcher li {
        float: left;
        width: 30px;
        height: 30px;
        margin: 0 15px 15px 0;
        border-radius: 30px;
        border: 3px solid black;
      } */
      
      /* #darkButton {
        background: gray;
      }
      #lightButton {
        background: white;
      } */


/* @media (min-width:481px)  { portrait e-readers (Nook/Kindle) }

@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 

 /* { tablet, landscape iPad, lo-res laptops ands desktops } */
@media (min-width:961px) {

    body {
        background-image: url("assets/noita-digital-QZX8jbK1xEw-unsplash\ \(1\).jpg");
        background-size: 100% 100%;
        min-height: 100%;
        resize: both; 
        overflow: scroll;  
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-color: black;
    }

    #aboutContainer {
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
        align-items: center;
        }
    #projectsContainer {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap;
        align-items: center;
        }

    #profilePicture {
    height: 21em;
    border: 10px solid transparent;
    background-image: radial-gradient(at bottom left,hsl(39, 100%, 50%),hsl(204, 0%, 100%,0.2),hsl(234, 100%, 50%));
    background-origin: border-box; 
    border-radius: 50% 0%;
    margin: 5em;
    }

    h1 {
        color: white;
        text-align: center;
        font-size: 6em;
        text-shadow: .06em .06em black;
        flex-grow: 2; 
    }
    h2 {
        color: white;
        text-align: center;;
        margin: -2em 10em 7em;
        backdrop-filter: blur(2em);
        padding: 1em;
        border-radius: 2em;
        text-shadow: .06em .06em black;
    }

    .shapes {
        background-repeat: no-repeat;
        display: flex;
        background-size: 100%;
        height: 25em;
        width: 25em;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }
    #triangle {
        background-image: url("assets/blueTriangle.png");
        margin-top: 9em;
    }
    #square {
        background-image: url("assets/yellowSquare.png");
        
    }
    #circle {
        background-image: url("assets/redCircle.png");
        margin: 19em 10em 10em 10em;
        /* float: right; */
    }

    .paragraphShapes {
        font-weight: bold;
        font-size: 2em;
        position: absolute;
        width: 120px;
        margin: 6em;
        text-align: center;
    }
    #paragraphTriangle {
        color: orange;
        text-shadow: .06em .06em black;
        margin-top: 5em;

    }
    #paragraphSquare {
        color: purple;
        text-shadow: .04em .04em black;
    }
    #paragraphCircle {
        color: green;
        text-shadow: .06em .06em black;
    }
    #carouselMain {
        width: 50em;
        text-align: center;
        margin: 3em 5em 3em 0;

    }
    .contactPage {
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
        align-items: center;
    }

    h4 {
        color: white;
        text-align: center;
        font-size: 4em;
        text-shadow: .06em .06em black; 
    }

    .skillSet {
        color: white;
        text-shadow: .06em .06em black;
        list-style-type: none;
        display: flex;
        justify-content: space-around;
        margin: 4em 2.5em 6em 1em;
    }
    .socials {
        color: white;
        text-shadow: .06em .06em black;
        list-style-type: none;
        display: flex;
        justify-content: flex-end;
        margin: 4em 2.5em 6em 1em;
    }

    
    /* #switcher {
        list-style: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
      }
      #switcher li {
        float: left;
        width: 30px;
        height: 30px;
        margin: 0 15px 15px 0;
        border-radius: 30px;
        border: 3px solid black;
      } */
      
      /* #darkButton {
        background: gray;
      }
      #lightButton {
        background: white;
      } */
}
/* @media (min-width:1025px) { big landscape tablets, laptops, and desktops } */
/* @media (min-width:1281px) { hi-res laptops and desktops } */ 

